Fix some compiler warnings